--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>BHOWMIK'S TRAVEL</h1>
-    <h3>look buddy i can push</h3>
+    <p>i am a ghost</p>
+    <p>ghost pushed</p>
 </body>
 </html>
