--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>BHOWMIK'S TRAVEL</h1>
     <p>i am a ghost</p>
     <p>ghost pushed</p>
+    <p>get help from google meet</p>
 </body>
 </html>
