--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <p>i am a ghost</p>
     <p>ghost pushed</p>
     <p>get help from google meet</p>
+    <p>gdfgvfg</p>
+    <p>ami nai</p>
 </body>
 </html>
